# SeisProc

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTO_PROCESSING.md  BANDPASS_DIAGNOSTIC.md  BUGFIX_BATCH_PROCESSING_LAZY_MODE.md  BUGFIX_LAZY_LOADING_ERRORS.md  BUGFIX_STRANSFORM_INVERSE.md  BUGFIX_TFD_INVERTED_THRESHOLD.md  BUGFIX_VIEWER_SWAP.md  BUGFIX_ZARR_ORIGINAL_SEGY_PATH.md  COMPLETE_FIX_SUMMARY.md  COMPUTED_HEADERS_GUIDE.md  CONTROL_PANEL_SCROLLING.md  DESIGN_FK_VELOCITY_FILTER.md  DESIGN_UNIVERSAL_UNITS.md  FILEDIALOG_FIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FK_DESIGNER_BUGFIXES.md  FK_DESIGNER_BUGFIXES_ROUND2.md  FK_DESIGNER_ENHANCEMENTS_V2.md  FK_DESIGNER_UI_IMPROVEMENTS_V2.md  FK_DESIGNER_UI_REDESIGN.md  FK_DESIGNER_UX_ENHANCEMENTS.md  FK_ENHANCEMENTS_STATUS.md  FK_FILTERING_IMPROVEMENTS.md  FK_FILTER_DESIGN.md  FK_FILTER_ENHANCEMENTS.md  FK_FIXES_ROUND3.md  FK_IMPLEMENTATION_COMPLETE.md  FK_TRACE_SPACING_EXPLAINED.md  GATHER_NAVIGATION.md  HEADER_MAPPING_GUIDE.md  HEADER_NAME_FIX.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  ISA_ENHANCED_FEATURES.md  ISA_FEATURE_SUMMARY.md  ISA_FIXES_SUMMARY.md  ISA_GAIN_SYNC_SUMMARY.md  ISA_QUICK_START.md  (+93 more)
benchmark_data/: ensemble_index.parquet  headers.parquet  metadata.json
benchmarks/: __init__.py  profile_processors.py  run_benchmarks.sh  synthetic_data_generator.py
docs/: 3D_FKK_Filter_Focused_Plan.md  3D_FKK_Filter_Implementation_Tasks.md  API.md  DATA_STORAGE_TASKS.md  FK_FILTER_ANALYSIS_REPORT.md  FK_UNIT_CONSISTENCY_TASKS.md  GPU_ACCELERATION_DESIGN.md  GPU_ACCELERATION_USAGE.md  IMPORT_DIALOG_RESTRUCTURE_DESIGN.md  IMPROVEMENT_TASKS.md  INTEGRATION_STATUS.md  MEMMAP_JOBLIB_DESIGN.md  Multiprocess_Import_Implementation_Plan.md  Noise_Model_Muting_Design.md  PARALLEL_IO_RESPONSIVENESS_FIX.md  PARALLEL_PROCESSING_OPTIMIZATION_REPORT.md  POLARS_ENSEMBLE_PRELOAD_DESIGN.md  Parallel_Processing_Export_Implementation_Plan.md  QC_IMPLEMENTATION_VERIFICATION.md  QC_STACKING_IMPLEMENTATION_PLAN.md  QC_STACKING_REVISED_TASKS.md  SCREENSHOT_ANALYSIS.md  SEGY_Acceleration_Implementation_Plan.md  SEGY_Performance_Benchmarks.md  SEGY_Performance_Diagnostic_Tests.md  SEGY_Performance_Implementation_Summary.md  SEGY_Performance_Implementation_Tasks.md  STFT_TFD_IMPLEMENTATION_PLAN.md  TFT_STFT_INVESTIGATION_REPORT.md  TF_DENOISE_ANALYSIS.md  denoising_methods_implementation_tasks.md  denoising_methods_proposal.md  hybrid_implementation_plan.md  kirchhoff_pstm_implementation_plan.md  metal_kernel_roadmap_v2.md  mlx_kernel_acceleration_plan.md  mlx_kernel_implementation_tasks.md  phase4_job_integration_migration.md  phase4_updated_plan.md  pstm_optimization_plan.md  (+8 more)
models/: __init__.py  anisotropy_model.py  app_settings.py  binning.py  dataset_navigator.py  fk_config.py  fkk_config.py  gather_navigator.py  header_mapping.py  header_schema.py  job.py  job_config.py  job_progress.py  lazy_seismic_data.py  migration_config.py  migration_geometry.py  migration_job.py  seismic_data.py  seismic_volume.py  velocity_model.py  viewport_state.py
processors/: __init__.py  agc.py  bandpass_filter.py  base_processor.py  cdp_stacker.py  chunked_processor.py  deconvolution.py  denoise_3d.py  dwt_denoise.py  emd_denoise.py  fk_filter.py  fkk_coordinate_filter.py  fkk_filter_gpu.py  gabor_denoise.py  gain_processor.py  kernel_backend.py  mute_processor.py  nmo_processor.py  omp_denoise.py  qc_batch_engine.py  qc_stacking_engine.py  spectral_analyzer.py  sst_denoise.py  stft_denoise.py  stockwell_denoise.py  tf_denoise.py  tf_denoise_gpu.py
scripts/: build_metal_kernels.sh
seisio/: gather_readers.py  migration_output.py
seismic_metal/: CMakeLists.txt
seismic_metal/benchmarks/: benchmark_metal_vs_numba.py
seismic_metal/include/: common_types.h  device_manager.h  dwt_kernel.h  fkk_kernel.h  stft_kernel.h  vdsp_fft.h
seismic_metal/python/: __init__.py  seismic_kernels.metallib
seismic_metal/shaders/: dwt_decompose.metal  dwt_reconstruct.metal  fkk_mask.metal  mad_threshold.metal  stft_forward.metal  stft_inverse.metal  swt_reconstruct.metal
seismic_metal/src/: bindings.cpp  device_manager.mm  dwt_kernel.mm  fkk_kernel.mm  stft_kernel.mm  vdsp_fft.mm
tests/: __init__.py  conftest.py  debug_job_dashboard.py  test_agc_outlier_artifacts.py  test_alert_manager.py  test_anisotropy_model.py  test_antialias.py  test_aperture_adaptive.py  test_binning.py  test_cancellation.py  test_checkpoint.py  test_common_offset_workflow.py  test_config_adapter.py  test_coordinate_volume_builder.py  test_dataset_indexer.py  test_denoise_3d.py  test_dwt_denoise.py  test_emd_denoise.py  test_fkk_agc_artifacts.py  test_frequency_band_diagnostic.py  test_frequency_parameters.py  test_gabor_denoise.py  test_gather_readers.py  test_geometry_preprocessor.py  test_gpu_memory.py  test_import_overhead.py  test_import_performance.py  test_integration_processing.py  test_integration_segy.py  test_interphase_integration.py  test_job_analytics_widget.py  test_job_history.py  test_job_manager.py  test_job_manager_history.py  test_job_models.py  test_kernel_profiling.py  test_kirchhoff_kernel.py  test_kirchhoff_mvp.py  test_kirchhoff_vz.py  test_main_window_integration.py  (+46 more)
tools/: resource_monitor.py
utils/: __init__.py  anisotropy_io.py  binning_presets.py  coordinate_volume_builder.py  dataset_indexer.py  disk_benchmark.py  fix_metadata_segy_path.py  geometry_utils.py  header_calculator.py  memory_monitor.py  memory_profiler_diagnostic.py  migration_output_storage.py  parquet_io.py  pptx_export.py  sample_data.py  sort_detector.py  storage_manager.py  subgather_detector.py  theme_manager.py  trace_sorter.py  trace_spacing.py  unit_conversion.py  update_dataset_paths.py  velocity_io.py  volume_builder.py  window_cache.py
views/: __init__.py  control_panel.py  export_options_dialog.py  fk_designer_dialog.py  fkk_designer_dialog.py  flip_window.py  gather_navigation_panel.py  isa_window.py  job_dashboard.py  main_window_integration.py  migration_monitor_dialog.py  processing_chain_widget.py  pstm_wizard_dialog.py  qc_batch_dialog.py  qc_presentation_control_panel.py  (+8 more)
(+94 files in other folders)
